--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
-    <script src="scriptChatGTP.js"></script>
+    
 
 </head>
 
 <body>
     <div class="loginLogo">
-        <div class="logoJoin" id="loading-logo">
-            <div style="width: 274px; height: 334.07px; position: relative">
+        <div class="logoJoin" id="login-container-overlay">
+            <div style="width: 274px; height: 334.07px; position: relative" id="loading-logo">
                 <div
                     style="width: 60.69px; height: 69.83px; left: 135.62px; top: 0px; position: absolute; background: #2A3647">
                     <svg xmlns="http://www.w3.org/2000/svg" width="62" height="70" viewBox="0 0 62 70" fill="none">
@@ -76,78 +76,92 @@
             </div>
         </div>
         <div class="loginInput" id="login-container" style="display: none;">
-            <div class="Frame-153">
+            <div class="frame-153">
                 <div class="frame-159">
-                    <a class="frame-159-text">Log in</a>
+                    <p class="frame-159-text">Log in</p>
                     <svg xmlns="http://www.w3.org/2000/svg" width="154" height="3" viewBox="0 0 154 3" fill="none">
                         <path d="M152 1.5L2 1.5" stroke="#29ABE2" stroke-width="3" stroke-linecap="round" />
                     </svg>
                 </div>
-            </div>
-            <div class="frame-250">
-                <div class="log-in-frigma">
-                    <div class="frame-14">
-                        <div class="frame-157">
-                            <input value="" type="text" class="form-control border-0" placeholder="Email"
-                                style="border: none; box-shadow: none;">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25"
-                                fill="none">
-                                <mask id="mask0_93908_5572" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0"
-                                    y="0" width="24" height="25">
-                                    <rect y="0.5" width="24" height="24" fill="#D9D9D9" />
-                                </mask>
-                                <g mask="url(#mask0_93908_5572)">
-                                    <path
-                                        d="M4 20.5C3.45 20.5 2.97917 20.3042 2.5875 19.9125C2.19583 19.5208 2 19.05 2 18.5V6.5C2 5.95 2.19583 5.47917 2.5875 5.0875C2.97917 4.69583 3.45 4.5 4 4.5H20C20.55 4.5 21.0208 4.69583 21.4125 5.0875C21.8042 5.47917 22 5.95 22 6.5V18.5C22 19.05 21.8042 19.5208 21.4125 19.9125C21.0208 20.3042 20.55 20.5 20 20.5H4ZM20 8.5L12.525 13.175C12.4417 13.225 12.3542 13.2625 12.2625 13.2875C12.1708 13.3125 12.0833 13.325 12 13.325C11.9167 13.325 11.8292 13.3125 11.7375 13.2875C11.6458 13.2625 11.5583 13.225 11.475 13.175L4 8.5V18.5H20V8.5ZM12 11.5L20 6.5H4L12 11.5ZM4 8.75V7.275V7.3V7.2875V8.75Z"
-                                        fill="#A8A8A8" />
-                                </g>
-                            </svg>
+
+                <div class="frame-250">
+                    <div class="log-in-frigma">
+                        <div class="frame-14">
+                            <div class="frame-157">
+                                <input value="" type="text" class="form-control border-0" placeholder="Email"
+                                    style="border: none; box-shadow: none;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25"
+                                    fill="none">
+                                    <mask id="mask0_93908_5572" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0"
+                                        y="0" width="24" height="25">
+                                        <rect y="0.5" width="24" height="24" fill="#D9D9D9" />
+                                    </mask>
+                                    <g mask="url(#mask0_93908_5572)">
+                                        <path
+                                            d="M4 20.5C3.45 20.5 2.97917 20.3042 2.5875 19.9125C2.19583 19.5208 2 19.05 2 18.5V6.5C2 5.95 2.19583 5.47917 2.5875 5.0875C2.97917 4.69583 3.45 4.5 4 4.5H20C20.55 4.5 21.0208 4.69583 21.4125 5.0875C21.8042 5.47917 22 5.95 22 6.5V18.5C22 19.05 21.8042 19.5208 21.4125 19.9125C21.0208 20.3042 20.55 20.5 20 20.5H4ZM20 8.5L12.525 13.175C12.4417 13.225 12.3542 13.2625 12.2625 13.2875C12.1708 13.3125 12.0833 13.325 12 13.325C11.9167 13.325 11.8292 13.3125 11.7375 13.2875C11.6458 13.2625 11.5583 13.225 11.475 13.175L4 8.5V18.5H20V8.5ZM12 11.5L20 6.5H4L12 11.5ZM4 8.75V7.275V7.3V7.2875V8.75Z"
+                                            fill="#A8A8A8" />
+                                    </g>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="frame-14">
+                            <div class="frame-157">
+                                <input value="" type="text" class="form-control border-0" placeholder="Password"
+                                    style="border: none; box-shadow: none;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25"
+                                    fill="none">
+                                    <mask id="mask0_93908_5579" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0"
+                                        y="0" width="24" height="25">
+                                        <rect y="0.5" width="24" height="24" fill="#D9D9D9" />
+                                    </mask>
+                                    <g mask="url(#mask0_93908_5579)">
+                                        <path
+                                            d="M6 22.5C5.45 22.5 4.97917 22.3042 4.5875 21.9125C4.19583 21.5208 4 21.05 4 20.5V10.5C4 9.95 4.19583 9.47917 4.5875 9.0875C4.97917 8.69583 5.45 8.5 6 8.5H7V6.5C7 5.11667 7.4875 3.9375 8.4625 2.9625C9.4375 1.9875 10.6167 1.5 12 1.5C13.3833 1.5 14.5625 1.9875 15.5375 2.9625C16.5125 3.9375 17 5.11667 17 6.5V8.5H18C18.55 8.5 19.0208 8.69583 19.4125 9.0875C19.8042 9.47917 20 9.95 20 10.5V20.5C20 21.05 19.8042 21.5208 19.4125 21.9125C19.0208 22.3042 18.55 22.5 18 22.5H6ZM6 20.5H18V10.5H6V20.5ZM12 17.5C12.55 17.5 13.0208 17.3042 13.4125 16.9125C13.8042 16.5208 14 16.05 14 15.5C14 14.95 13.8042 14.4792 13.4125 14.0875C13.0208 13.6958 12.55 13.5 12 13.5C11.45 13.5 10.9792 13.6958 10.5875 14.0875C10.1958 14.4792 10 14.95 10 15.5C10 16.05 10.1958 16.5208 10.5875 16.9125C10.9792 17.3042 11.45 17.5 12 17.5ZM9 8.5H15V6.5C15 5.66667 14.7083 4.95833 14.125 4.375C13.5417 3.79167 12.8333 3.5 12 3.5C11.1667 3.5 10.4583 3.79167 9.875 4.375C9.29167 4.95833 9 5.66667 9 6.5V8.5Z"
+                                            fill="#A8A8A8" />
+                                    </g>
+                                </svg>
+                            </div>
                         </div>
                     </div>
-                    <div class="frame-14">
-                        <div class="frame-157">
-                            <input value="" type="text" class="form-control border-0" placeholder="Password"
-                                style="border: none; box-shadow: none;">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25"
-                                fill="none">
-                                <mask id="mask0_93908_5579" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0"
-                                    y="0" width="24" height="25">
-                                    <rect y="0.5" width="24" height="24" fill="#D9D9D9" />
-                                </mask>
-                                <g mask="url(#mask0_93908_5579)">
-                                    <path
-                                        d="M6 22.5C5.45 22.5 4.97917 22.3042 4.5875 21.9125C4.19583 21.5208 4 21.05 4 20.5V10.5C4 9.95 4.19583 9.47917 4.5875 9.0875C4.97917 8.69583 5.45 8.5 6 8.5H7V6.5C7 5.11667 7.4875 3.9375 8.4625 2.9625C9.4375 1.9875 10.6167 1.5 12 1.5C13.3833 1.5 14.5625 1.9875 15.5375 2.9625C16.5125 3.9375 17 5.11667 17 6.5V8.5H18C18.55 8.5 19.0208 8.69583 19.4125 9.0875C19.8042 9.47917 20 9.95 20 10.5V20.5C20 21.05 19.8042 21.5208 19.4125 21.9125C19.0208 22.3042 18.55 22.5 18 22.5H6ZM6 20.5H18V10.5H6V20.5ZM12 17.5C12.55 17.5 13.0208 17.3042 13.4125 16.9125C13.8042 16.5208 14 16.05 14 15.5C14 14.95 13.8042 14.4792 13.4125 14.0875C13.0208 13.6958 12.55 13.5 12 13.5C11.45 13.5 10.9792 13.6958 10.5875 14.0875C10.1958 14.4792 10 14.95 10 15.5C10 16.05 10.1958 16.5208 10.5875 16.9125C10.9792 17.3042 11.45 17.5 12 17.5ZM9 8.5H15V6.5C15 5.66667 14.7083 4.95833 14.125 4.375C13.5417 3.79167 12.8333 3.5 12 3.5C11.1667 3.5 10.4583 3.79167 9.875 4.375C9.29167 4.95833 9 5.66667 9 6.5V8.5Z"
-                                        fill="#A8A8A8" />
-                                </g>
-                            </svg>
+                    <div class="frame-158">
+                        <div class="frame-37">
+                            <input type="checkbox" name="Remeber me" id="" class="check-button m-0 p-0"
+                                style="margin: 0;">
+                            <p class="check-button-text m-0 p-0" style="margin: 0;">Remember me</p>
                         </div>
+
                     </div>
                 </div>
-                <div class="frame-158">
-                    <div class="frame-37">
-                        <input type="checkbox" name="Remeber me" id="" class="check-button m-0 p-0" style="margin: 0;">
-                        <p class="check-button-text m-0 p-0" style="margin: 0;">Remember me</p>
-                    </div>
-
+                <div class="frame-176">
+                    <button class="button-wo-icon" type="button">Log in</button>
+                    <button class="button-secondary-wo-icon" type="button">Guest Log in</button>
                 </div>
             </div>
-
-
         </div>
+        <div class="frame-156" id="login-signup" style="display: none;">
+            <p class="frame-156-text">Not a Join user?</p>
+            <button class="button-wo-icon"> Sign up</button>
+        </div>
+    </div>
 
 
-        <!-- Loading anmation script -->
-        <script>
-            setTimeout(function () {
-                var logo = document.getElementById('loading-logo');
-                var login = document.getElementById('login-container');
-                logo.style.transition = 'transform 0.5s ease-in-out, opacity 0.5s ease-in-out';
-                logo.style.transform = 'translate(-100%, -100%) scale(0.25)';
-                logo.style.opacity = '100';
-                login.style.display = 'flex';
-
-            }, 2000); // 2-second delay
-        </script>
+    <!-- Loading anmation script -->
+    <script>
+        setTimeout(function () {
+            var logo = document.getElementById('loading-logo');
+            var login = document.getElementById('login-container');
+            var loginOverlay = document.getElementById('login-container-overlay');
+            var loginsignup = document.getElementById ('login-signup')
+            logo.style.transition = 'transform 0.5s ease-in-out, opacity 0.5s ease-in-out';
+            logo.style.transform = 'translate(-100%, -100%) scale(0.25)';
+            login.style.transition = 'transform 0.5s ease-in-out, opacity 0.5s ease-in-out';
+            login.style.display = 'flex';
+            loginOverlay.style.width = '0px';
+            loginsignup.style.display = 'flex';            
+            loginsignup.style.transition = 'transform 0.5s ease-in-out, opacity 0.5s ease-in-out';
+            loginsignup.style.transform = 'opacity(1.0)';
+        }, 2000); // 2-second delay
+    </script>
 
 </body>
 
