added 1. function HTML with link to Guestbutton

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
                 <div class="frame-176">
                     <button class="button-wo-icon" type="button">Log in</button>
-                    <button class="button-secondary-wo-icon" type="button">Guest Log in</button>
+                    <button class="button-secondary-wo-icon" type="button"><a href="summary.html" target="_blank" rel="noopener noreferrer"></a>Guest Log in</button>
                 </div>
             </div>
         </div>
