crrection style, create header and sidebar plea

--- a/summary.html
+++ b/summary.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,12 @@
     <!-- customize Stylefiles-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="generalElements.css">
+
+    <!-- customize Font -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
 
 
     <!-- BOOTSTARP LINKS -->
@@ -26,12 +33,46 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
-    
+
 
 </head>
 
 <body>
-    
+    <div class="header-figma">
+        <p class="frame-156-text">Kanban Project Management Tool</p>
+        <div class="frame-42">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                <mask id="mask0_93908_6688" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="32"
+                    height="32">
+                    <rect width="32" height="32" fill="#D9D9D9" />
+                </mask>
+                <g mask="url(#mask0_93908_6688)">
+                    <path
+                        d="M15.95 22C16.3 22 16.5958 21.8792 16.8375 21.6375C17.0792 21.3958 17.2 21.1 17.2 20.75C17.2 20.4 17.0792 20.1042 16.8375 19.8625C16.5958 19.6208 16.3 19.5 15.95 19.5C15.6 19.5 15.3042 19.6208 15.0625 19.8625C14.8208 20.1042 14.7 20.4 14.7 20.75C14.7 21.1 14.8208 21.3958 15.0625 21.6375C15.3042 21.8792 15.6 22 15.95 22ZM16 26C14.6167 26 13.3167 25.7375 12.1 25.2125C10.8833 24.6875 9.825 23.975 8.925 23.075C8.025 22.175 7.3125 21.1167 6.7875 19.9C6.2625 18.6833 6 17.3833 6 16C6 14.6167 6.2625 13.3167 6.7875 12.1C7.3125 10.8833 8.025 9.825 8.925 8.925C9.825 8.025 10.8833 7.3125 12.1 6.7875C13.3167 6.2625 14.6167 6 16 6C17.3833 6 18.6833 6.2625 19.9 6.7875C21.1167 7.3125 22.175 8.025 23.075 8.925C23.975 9.825 24.6875 10.8833 25.2125 12.1C25.7375 13.3167 26 14.6167 26 16C26 17.3833 25.7375 18.6833 25.2125 19.9C24.6875 21.1167 23.975 22.175 23.075 23.075C22.175 23.975 21.1167 24.6875 19.9 25.2125C18.6833 25.7375 17.3833 26 16 26ZM16 24C18.2333 24 20.125 23.225 21.675 21.675C23.225 20.125 24 18.2333 24 16C24 13.7667 23.225 11.875 21.675 10.325C20.125 8.775 18.2333 8 16 8C13.7667 8 11.875 8.775 10.325 10.325C8.775 11.875 8 13.7667 8 16C8 18.2333 8.775 20.125 10.325 21.675C11.875 23.225 13.7667 24 16 24ZM16.1 11.7C16.5167 11.7 16.8792 11.8333 17.1875 12.1C17.4958 12.3667 17.65 12.7 17.65 13.1C17.65 13.4667 17.5375 13.7917 17.3125 14.075C17.0875 14.3583 16.8333 14.625 16.55 14.875C16.1667 15.2083 15.8292 15.575 15.5375 15.975C15.2458 16.375 15.1 16.825 15.1 17.325C15.1 17.5583 15.1875 17.7542 15.3625 17.9125C15.5375 18.0708 15.7417 18.15 15.975 18.15C16.225 18.15 16.4375 18.0667 16.6125 17.9C16.7875 17.7333 16.9 17.525 16.95 17.275C17.0167 16.925 17.1667 16.6125 17.4 16.3375C17.6333 16.0625 17.8833 15.8 18.15 15.55C18.5333 15.1833 18.8625 14.7833 19.1375 14.35C19.4125 13.9167 19.55 13.4333 19.55 12.9C19.55 12.05 19.2042 11.3542 18.5125 10.8125C17.8208 10.2708 17.0167 10 16.1 10C15.4667 10 14.8625 10.1333 14.2875 10.4C13.7125 10.6667 13.275 11.075 12.975 11.625C12.8583 11.825 12.8208 12.0375 12.8625 12.2625C12.9042 12.4875 13.0167 12.6583 13.2 12.775C13.4333 12.9083 13.675 12.95 13.925 12.9C14.175 12.85 14.3833 12.7083 14.55 12.475C14.7333 12.225 14.9625 12.0333 15.2375 11.9C15.5125 11.7667 15.8 11.7 16.1 11.7Z"
+                        fill="#A8A8A8" />
+                </g>
+            </svg>
+            <div class="group-5">
+                <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56">
+                    <circle cx="28" cy="28" r="26.5" stroke="#2A3647" stroke-width="3" fill="none" />
+                    <text class="frame-156-text" x="50%" y="50%" text-anchor="middle"
+                        alignment-baseline="middle" style="color: #29ABE2;">SM</text>
+                </svg>
+            </div>
+        </div>
+    </div>
+    <div class="sidebar">
+        <div class="cap2">
+            <svg xmlns="http://www.w3.org/2000/svg" width="102" height="122" viewBox="0 0 102 122" fill="none">
+                <path d="M72.655 0H50.4972V25.4923H72.655V0Z" fill="white"/>
+                <path d="M50.4971 46.2251H72.655V82.1779C72.7562 90.8292 70.2941 99.3153 65.5815 106.557C60.9284 113.594 51.9459 121.966 35.3275 121.966C17.2263 121.966 6.67577 113.406 0.98291 108.715L14.9594 91.4743C20.5159 96.0112 25.8679 99.7435 35.4128 99.7435C42.6396 99.7435 45.5202 96.7988 47.2076 94.2307C49.5015 90.6637 50.6881 86.4923 50.6165 82.2464L50.4971 46.2251Z" fill="white"/>
+                <path d="M39.1967 30.1318H17.0388V52.3884H39.1967V30.1318Z" fill="#29ABE2"/>
+                <path d="M84.2622 111.522C84.2622 116.265 81.859 118.815 78.5012 118.815C75.1434 118.815 72.9447 115.785 72.9447 111.762C72.9447 107.739 75.2116 104.554 78.6887 104.554C82.1658 104.554 84.2622 107.687 84.2622 111.522ZM75.5184 111.711C75.5184 114.57 76.6604 116.675 78.6205 116.675C80.5806 116.675 81.6885 114.45 81.6885 111.539C81.6885 108.988 80.6659 106.592 78.6205 106.592C76.5752 106.592 75.5184 108.903 75.5184 111.711Z" fill="white"/>
+                <path d="M88.6597 104.76V118.593H86.2053V104.76H88.6597Z" fill="white"/>
+                <path d="M91.3187 118.593V104.76H94.0458L96.9775 110.461C97.7322 111.952 98.4036 113.483 98.9887 115.049C98.8353 113.337 98.7672 111.368 98.7672 109.177V104.76H101.017V118.593H98.4774L95.5117 112.772C94.7265 111.243 94.0266 109.671 93.4152 108.064C93.4152 109.776 93.5345 111.711 93.5345 114.09V118.576L91.3187 118.593Z" fill="white"/>
+                </svg>
+        </div>
+    </div>
 </body>
 
 
