--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="generalElements.css">
 
+    <!-- customize Font -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+
 
     <!-- BOOTSTARP LINKS -->
     <!-- Latest compiled and minified CSS -->
@@ -27,7 +33,7 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
-    
+
 
 </head>
 
@@ -88,7 +94,7 @@
                     <div class="log-in-frigma">
                         <div class="frame-14">
                             <div class="frame-157">
-                                <input value="" type="text" class="form-control border-0" placeholder="Email"
+                                <input value="" type="email" class="form-control border-0" placeholder="Email"
                                     style="border: none; box-shadow: none;">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25"
                                     fill="none">
@@ -106,7 +112,7 @@
                         </div>
                         <div class="frame-14">
                             <div class="frame-157">
-                                <input value="" type="text" class="form-control border-0" placeholder="Password"
+                                <input value="" type="password" class="form-control border-0" placeholder="Password"
                                     style="border: none; box-shadow: none;">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25"
                                     fill="none">
@@ -134,7 +140,8 @@
                 </div>
                 <div class="frame-176">
                     <button class="button-wo-icon" type="button">Log in</button>
-                    <button class="button-secondary-wo-icon" type="button"><a href="summary.html" target="_blank" rel="noopener noreferrer"></a>Guest Log in</button>
+                    <button class="button-secondary-wo-icon" type="button"><a href="summary.html" target="_blank"
+                            rel="noopener noreferrer"></a>Guest Log in</button>
                 </div>
             </div>
         </div>
@@ -151,13 +158,13 @@
             var logo = document.getElementById('loading-logo');
             var login = document.getElementById('login-container');
             var loginOverlay = document.getElementById('login-container-overlay');
-            var loginsignup = document.getElementById ('login-signup')
+            var loginsignup = document.getElementById('login-signup')
             logo.style.transition = 'transform 0.5s ease-in-out, opacity 0.5s ease-in-out';
             logo.style.transform = 'translate(-100%, -100%) scale(0.25)';
             login.style.transition = 'transform 0.5s ease-in-out, opacity 0.5s ease-in-out';
             login.style.display = 'flex';
             loginOverlay.style.width = '0px';
-            loginsignup.style.display = 'flex';            
+            loginsignup.style.display = 'flex';
             loginsignup.style.transition = 'transform 0.5s ease-in-out, opacity 0.5s ease-in-out';
             loginsignup.style.transform = 'opacity(1.0)';
         }, 2000); // 2-second delay
