--- a/board.html
+++ b/board.html
@@ -33,11 +33,12 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
+    <script src="js/add_task.js"></script>
 
 
 </head>
 
-<body>
+<body onload="loadAllTask()">
     <div class="header-figma">
         <p class="frame-156-text">Kanban Project Management Tool</p>
         <div class="frame-42">
