--- a/addtask.html
+++ b/addtask.html
@@ -41,24 +41,8 @@
 <body>
     <div w3-include-html="header.html"></div>
     <div w3-include-html="sidebar.html"></div>
-
- <!-- Input Task Fields -->
- <div class="task">
-<input id="taskTitle">
-<input type="text" id="taskDescription" placeholder="Enter a Description">
-<input type="date" name="" id="tastDueDate" placeholder="dd/mm/yyyy">
-<select name="" id="taskContact">
-        <option value="Georg">Georg</option>
-        <option value="Alex">Alex</option>
-        <option value="Jean">Jean</option>
-</select>
-<select name="" id="taskCategory">
-    <option value="To Do">To Do</option>
-    <option value="In progrss">In progrss</option>
-    <option value="Await feedback">Await feedback</option>
-</select>
-<button onclick="addTask()">Add Task</button>
-</div>
+     <!-- Input Task Fields -->
+    <div w3-include-html="task_form.html"></div>
 
 <script>
     includeHTML();
