Design verbessert und Buttons erstellt

--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
                     </div>
                 </div>
                 <div class="frame-176">
-                    <button class="button-wo-icon" type="button">Log in</button>
-                    <button class="button-secondary-wo-icon" type="button"><a href="summary.html" target="_blank"
+                    <button class="button-wo-icon text-sm-btn" type="button">Log in</button>
+                    <button class="button-secondary-wo-icon text-sm-btn" type="button"><a href="summary.html" target="_blank"
                             rel="noopener noreferrer"></a>Guest Log in</button>
                 </div>
             </div>
         </div>
         <div class="frame-156" id="login-signup" style="display: none;">
             <p class="frame-156-text">Not a Join user?</p>
-            <button class="button-wo-icon"> Sign up</button>
+            <button class="button-wo-icon text-sm-btn"> Sign up</button>
         </div>
     </div>
 
