--- a/summary.html
+++ b/summary.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join</title>
+    <title>Summary</title>
 
     <!-- customize Stylefiles-->
     <link rel="stylesheet" href="style.css">
@@ -33,8 +33,6 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
-
-
 </head>
 
 <body>
