--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- customize Stylefiles-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="generalElements.css">
+    <link rel="stylesheet" href="styleguide.css">
 
     <!-- customize Font -->
 
