--- a/addtask.html
+++ b/addtask.html
@@ -6,8 +6,11 @@
     <title>Join</title>
 
     <!-- customize Stylefiles-->
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="generalElements.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
+    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
 
     <!-- customize Font -->
 
