--- a/board.html
+++ b/board.html
@@ -7,8 +7,11 @@
     <title>Join</title>
 
     <!-- customize Stylefiles-->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="generalElements.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
+    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
 
     <!-- customize Font -->
 
