--- a/addtask.html
+++ b/addtask.html
@@ -51,10 +51,10 @@
   </head>
 
   <body>
-    <div w3-include-html="header.html"></div>
-    <div w3-include-html="sidebar.html"></div>
+    <div w3-include-html="assed/template/header.html"></div>
+    <div w3-include-html="assed/template/sidebar.html"></div>
     <!-- Input Task Fields -->
-    <div w3-include-html="task_form.html"></div>
+    <div w3-include-html="assed/template/task_form.html"></div>
 
     <script>
       includeHTML();
