--- a/board.html
+++ b/board.html
@@ -42,9 +42,8 @@
 </head>
 
 <body onload="loadAllTask()">
-    <div w3-include-html="header.html"></div>
-    <div w3-include-html="sidebar.html"></div>
-
+    <div w3-include-html="assed/template/header.html"></div>
+    <div w3-include-html="assed/template/sidebar.html"></div>
     
 <script>
     includeHTML();
