--- a/summary.html
+++ b/summary.html
@@ -39,8 +39,8 @@
 </head>
 
 <body>
-    <div w3-include-html="header.html"></div>
-    <div w3-include-html="sidebar.html"></div>
+    <div w3-include-html="assed/template/header.html"></div>
+    <div w3-include-html="assed/template/sidebar.html"></div>
 
     
 <script>
