Added Guest LogIn

--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
     <link rel="stylesheet" type="text/css" href="css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
-<<<<<<< HEAD
-    <link rel="stylesheet" href="sidebar.css">
-=======
-    <link rel="stylesheet" href="styleguide.css">
->>>>>>> 9a07ac5ee4493cfdd47b3c4918f38df96a8c341e
 
     <!-- customize Font -->
 
@@ -148,8 +143,7 @@
                 </div>
                 <div class="frame-176">
                     <button class="button-wo-icon text-sm-btn" type="button">Log in</button>
-                    <button class="button-secondary-wo-icon text-sm-btn" type="button"><a href="summary.html" target="_blank"
-                            rel="noopener noreferrer"></a>Guest Log in</button>
+                    <button class="button-secondary-wo-icon text-sm-btn" onclick="window.location.href='Summary.html'" type="button">Gust Log in</button>
                 </div>
             </div>
         </div>
