--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join</title>
+    <title>Join-Login</title>
 
     <!-- customize Stylefiles-->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
+    <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
-    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
 
     <!-- customize Font -->
 
@@ -44,14 +44,14 @@
     <div class="loginLogo">
         <div class="logoJoin" id="login-container-overlay">
             <div style="width: 274px; height: 334.07px; position: relative" id="loading-logo">
-                <embed src="/join/assed/svg/join_logoBIG.svg" type="">         
+                <img src="/assed/svg/join_logoBIG.svg" alt="">       
             </div>
         </div>
         <div class="loginInput" id="login-container" style="display: none;">
             <div class="frame-153">
                 <div class="frame-159">
                     <p class="frame-159-text">Log in</p>
-                    <embed src="/join/assed/svg/underlineLogIn.svg" type="">
+                    <img src="/assed/svg/underlineLogIn.svg" alt="" class="s">
                 </div>
                 <div class="frame-250">
                     <div class="log-in-frigma">
@@ -59,14 +59,14 @@
                             <div class="frame-157">
                                 <input value="" type="email" class="form-control border-0" placeholder="Email"
                                     style="border: none; box-shadow: none;">
-                               <embed src="/join/assed/svg/emailicon.svg" type="">
+                               <img src="/assed/svg/emailicon.svg" alt="" srcset="">
                             </div>
                         </div>
                         <div class="frame-14">
                             <div class="frame-157">
                                 <input value="" type="password" class="form-control border-0" placeholder="Password"
                                     style="border: none; box-shadow: none;">
-                                <embed src="/join/assed/svg/passwordicon.svg" type="">
+                                <img src="/assed/svg/passwordicon.svg" alt="">
                             </div>
                         </div>
                     </div>
