--- a/summary.html
+++ b/summary.html
@@ -7,11 +7,11 @@
     <title>Summary</title>
 
     <!-- customize Stylefiles-->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
+    <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
-    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
 
     <!-- customize Font -->
 
