--- a/addtask.html
+++ b/addtask.html
@@ -1,63 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>addtask</title>
 
-    <!-- customize Stylefiles-->
-    <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
-    <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
-    <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>addtask</title>
 
-    <!-- customize Font -->
+  <!-- customize Stylefiles-->
+  <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
+  <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
+  <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap"
-      rel="stylesheet"
-    />
+  <!-- customize Font -->
 
-    <!-- BOOTSTARP LINKS -->
-    <!-- Latest compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
-      integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
-      crossorigin="anonymous"
-    />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet" />
 
-    <!-- Optional theme -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
-      integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ"
-      crossorigin="anonymous"
-    />
+  <!-- BOOTSTARP LINKS -->
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
+    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous" />
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
-      integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-      crossorigin="anonymous"
-    ></script>
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
+    integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous" />
 
-    <!-- customize Scripts -->
-    <script src="script.js"></script>
-    <script src="js/add_task.js"></script>
-  </head>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+    crossorigin="anonymous"></script>
 
-  <body>
-    <div w3-include-html="assed/template/header.html"></div>
-    <div w3-include-html="assed/template/sidebar.html"></div>
-    <!-- Input Task Fields -->
-    <div w3-include-html="assed/template/task_form.html"></div>
+  <!-- customize Scripts -->
+  <script src="script.js"></script>
+  <script src="js/add_task.js"></script>
+  
+  <!-- Favivon -->
 
-    <script>
-      includeHTML();
-    </script>
-  </body>
+  <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
+
+
+</head>
+
+<body>
+  <div w3-include-html="assed/template/header.html"></div>
+  <div w3-include-html="assed/template/sidebar.html"></div>
+  <!-- Input Task Fields -->
+  <div w3-include-html="assed/template/task_form.html"></div>
+
+  <script>
+    includeHTML();
+  </script>
+</body>
+
 </html>
