--- a/board.html
+++ b/board.html
@@ -37,6 +37,10 @@
     <script src="script.js"></script>
     <script src="js/add_task.js"></script>
 
+    <!-- Favivon -->
+
+    <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
+
 
 </head>
 
