--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,10 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
+    <!-- Favivon -->
+
+    <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
+
 
 
 </head>
@@ -44,10 +48,10 @@
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
 
-    
-<script>
-    includeHTML();
-</script>
+
+    <script>
+        includeHTML();
+    </script>
 </body>
 
 
