--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <!-- customize Scripts -->
     <script src="script.js"></script>
 
+    <!-- Favivon -->
+
+    <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
+
 
 </head>
 
