--- a/summary.html
+++ b/summary.html
@@ -36,16 +36,20 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
+
+    <!-- Favivon -->
+
+    <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
 </head>
 
 <body>
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
 
-    
-<script>
-    includeHTML();
-</script>
+
+    <script>
+        includeHTML();
+    </script>
 </body>
 
 
