--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
+    <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
 
     <!-- customize Font -->
 
@@ -41,12 +42,34 @@
     <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
 
 
+    
+
 
 </head>
 
 <body>
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
+
+
+    <div class="generalcontacts-frame97">
+
+        <div class="bar">
+            <div class="vector-13"> 
+                <img src="assed/svg/contact-imgs/Vector 13.svg" alt="">
+            </div>
+
+        </div>
+
+
+    </div>
+
+    
+
+
+
+
+
 
 
     <script>
