addtask html mit css grob erstellt

--- a/addtask.html
+++ b/addtask.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
+  <link rel="stylesheet" type="text/css" href="/css/addtask.css">
 
   <!-- customize Font -->
 
