Backend is not working

--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
+    <script src="js/storage.js"></script>
     <!-- Favivon -->
 
     <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
