--- a/addtask.html
+++ b/addtask.html
@@ -37,6 +37,7 @@
   <!-- customize Scripts -->
   <script src="script.js"></script>
   <script src="js/add_task.js"></script>
+  <script src="js/storage.js"></script>
   
   <!-- Favivon -->
 
