--- a/board.html
+++ b/board.html
@@ -36,6 +36,7 @@
     <!-- customize Scripts -->
     <script src="script.js"></script>
     <script src="js/add_task.js"></script>
+    <script src="js/storage.js"></script>
 
     <!-- Favivon -->
 
