--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
+    <script src="js/storage.js"></script>
 
     <!-- Favivon -->
 
