--- a/contact.html
+++ b/contact.html
@@ -54,13 +54,24 @@
 
     <div class="generalcontacts-frame97">
 
+        <!--
         <div class="bar">
             <div class="vector-13"> 
                 <img src="assed/svg/contact-imgs/Vector 13.svg" alt="">
             </div>
 
-        </div>
+            <div class="vector-12">
+                <img src="assed/svg/contact-imgs/Vector 12.svg" alt="">
+            </div>
 
+        </div>  -->
+
+
+        <div class="btn-div">
+            <button class="add-new-contact-btn">
+
+            </button>
+        </div>
 
     </div>
 
