contact-page progress

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,6 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
-    <script src="js/storage.js"></script>
     <!-- Favivon -->
 
     <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
@@ -70,8 +69,22 @@
 
         <div class="btn-div">
             <button class="add-new-contact-btn">
+                <div class="add-new-contact-text-div">Add new contact</div>
+          
+            <img src="assed/svg/contact-imgs/person_add.svg" alt="" class="add-img">
+        </button>
+        </div>
 
-            </button>
+
+        <div class="contact-letter-frame-119"> A </div>
+
+        <img src="assed/svg/contact-imgs/Vector 10.svg" alt="" class="vector-10">
+
+        <div class="contact-name">
+            <div class="contact-name-circle">
+                <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="">
+                <div class="contact-name-circle-txt">AM</div>
+            </div>
         </div>
 
     </div>
