--- a/contact.html
+++ b/contact.html
@@ -85,6 +85,12 @@
                 <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="">
                 <div class="contact-name-circle-txt">AM</div>
             </div>
+
+            <div class="name-mail-div-frame81">
+                <div class="contact-name-txt">Anton Mayer</div>
+                <div class="contact-email">antom@gmail.com</div>
+
+            </div>
         </div>
 
     </div>
