contact default ready whith css

--- a/contact.html
+++ b/contact.html
@@ -89,10 +89,16 @@
             <div class="name-mail-div-frame81">
                 <div class="contact-name-txt">Anton Mayer</div>
                 <div class="contact-email">antom@gmail.com</div>
-
             </div>
         </div>
 
+    </div>
+
+
+    <div class="contacts-header-frame40">
+        <div class="contacts-header-txt-bold">Contacts</div>
+        <img src="assed/svg/contact-imgs/Vector 5.svg" alt="">
+        <div class="contacts-header-txt-small">Better with a team</div>
     </div>
 
     
