--- a/summary.html
+++ b/summary.html
@@ -46,12 +46,45 @@
 <body>
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
+    <!--Content DIV-->
+    <div class="summary_content">
+        <!--Div for Join Logo-->
+        <div>
+            <img src="/assed/svg/join_summary_logo.svg" style="width: 625px; height: 73px;" alt="" srcset="">
+        </div>
+        <!--Div for content Tables-->
+        <div class="summary_cards">
+            <div class="flex-row-center">
+                <div class="summary_card">
+                    <img class="logos-summary" src="/assed/svg/edit.svg" alt="">
+                    <div>
+                        <p class="p-headline">1</p>
+                        <p class="p-summary">To-do</p>
+                    </div>
+                </div>
+                <div class="summary_card">
+                    <img class="logos-summary" src="/assed/svg/checkbutton_icon.svg" alt="">
+                    <div>
+                        <p class="p-headline">1</p>
+                        <p class="p-summary">Done</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-row-center">
 
+            </div>
+        </div>
+        <!--Div for nice greetings :-)-->
+        <div>
+
+        </div>
+    </div>
 
     <script>
         includeHTML();
     </script>
 </body>
+
 
 
 </html>
