drag and drop, fehler verbesserungen

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
     <script src="script.js"></script>
     <script src="js/storage.js"></script>
 
+    <!-- draggable libary -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.1/draggable.bundle.legacy.min.js"></script>
+
+
     <!-- Favivon -->
 
     <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
