--- a/board.html
+++ b/board.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
+    <link rel="stylesheet" type="text/css" href="/css/draggablecards.css">
+
     <!-- customize Font -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,14 +31,21 @@
         integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
-        integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-        crossorigin="anonymous"></script>
+    <!-- Include Bootstrap JS (optional) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Include Draggable Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.1/draggable.bundle.legacy.min.js"></script>
+
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
     <script src="js/add_task.js"></script>
     <script src="js/storage.js"></script>
+    <script src="js/draggable.js"></script>
+
 
     <!-- Favivon -->
 
@@ -48,10 +57,14 @@
 <body onload="loadAllTask()">
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
-    
-<script>
-    includeHTML();
-</script>
+    <dir w3-include-html="assed/template/draggablecards.html"></dir>
+
+
+    <div></div>
+
+    <script>
+        includeHTML();
+    </script>
 </body>
 
 
