--- a/contact.html
+++ b/contact.html
@@ -101,6 +101,26 @@
         <div class="contacts-header-txt-small">Better with a team</div>
     </div>
 
+
+
+
+
+
+
+
+
+    <!--View Contact-->
+    <div class="view-contact-div">
+
+        <div class="show-name">
+            <div class="show-name-circle">
+                <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="" class="show-name-circle-img">
+                <div class="show-name-circle-txt">AM</div>
+            </div>
+        </div>
+
+    </div>
+
     
 
 
