view-contact progress

--- a/contact.html
+++ b/contact.html
@@ -117,6 +117,19 @@
                 <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="" class="show-name-circle-img">
                 <div class="show-name-circle-txt">AM</div>
             </div>
+
+            <div class="show-name-close">
+                <div class="name-container-frame81">
+                    Anton Mayer
+                </div>
+                <div class="edit-name">
+                    <div class="edit-name-sub">
+                        <img src="assed/svg/contact-imgs/edit.svg" alt="" class="edit-pen-img">
+                        <div class="edit-txt">Edit</div>
+                    </div>
+                    <div class=""></div>
+                </div>                                        
+            </div>
         </div>
 
     </div>
