Summary added Cards

--- a/summary.html
+++ b/summary.html
@@ -55,14 +55,14 @@
         <!--Div for content Tables-->
         <div class="summary_cards">
             <div class="flex-row-center">
-                <div class="summary_card">
+                <div class="summary_card frame-65">
                     <img class="logos-summary" src="/assed/svg/edit.svg" alt="">
                     <div>
                         <p class="p-headline">1</p>
                         <p class="p-summary">To-do</p>
                     </div>
                 </div>
-                <div class="summary_card">
+                <div class="summary_card frame-65">
                     <img class="logos-summary" src="/assed/svg/checkbutton_icon.svg" alt="">
                     <div>
                         <p class="p-headline">1</p>
@@ -71,7 +71,38 @@
                 </div>
             </div>
             <div class="flex-row-center">
-
+                <div class="summary_card frame-summary">
+                    <img class="logos-summary" src="/assed/svg/edit.svg" alt="">
+                    <div>
+                        <p class="p-headline">1</p>
+                        <p class="p-summary">To-do</p>
+                    </div>
+                    <img src="/assed/svg/vertical_line.svg" alt="">
+                    <div>
+                        <p class="p-headline">1</p>
+                        <p class="p-summary">To-do</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-row-center">
+                <div class="summary_card">
+                    <div class="frame-64">
+                        <p class="p-headline">5</p>
+                        <p class="p-summary">Tasks in Board</p>
+                    </div>
+                </div>
+                <div class="summary_card">
+                    <div class="frame-64">
+                        <p class="p-headline">2</p>
+                        <p class="p-summary">Tasks in Progress</p>
+                    </div>
+                </div>
+                <div class="summary_card">
+                    <div class="frame-64">
+                        <p class="p-headline">2</p>
+                        <p class="p-summary">Awaiting Feedback</p>
+                    </div>
+                </div>
             </div>
         </div>
         <!--Div for nice greetings :-)-->
