contact - view-contact ready whith hover animations

--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,10 @@
                 <div class="email-txt">Email</div>
                 <div class="actual-email">antom@gmail.com</div>
             </div>
-            <div class=""></div>
+            <div class="phone-div">
+                <div class="phone-txt">Phone</div>
+                <div class="actual-phone-number">+49 7345 5324 </div>
+            </div>
         </div>
 
     </div>
