--- a/board.html
+++ b/board.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
     <link rel="stylesheet" type="text/css" href="/css/draggablecards.css">
+    <link rel="stylesheet" type="text/css" href="/css/board.css">
 
     <!-- customize Font -->
 
