--- a/board.html
+++ b/board.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
     <link rel="stylesheet" type="text/css" href="/css/draggablecards.css">
     <link rel="stylesheet" type="text/css" href="/css/board.css">
+    <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
 
     <!-- customize Font -->
 
@@ -45,7 +46,9 @@
     <script src="script.js"></script>
     <script src="js/add_task.js"></script>
     <script src="js/storage.js"></script>
-    <script src="js/draggable.js"></script>
+    <!-- <script src="js/draggable.js"></script> -->
+    <!-- <script src="/js/draggable copy.js"></script> -->
+    <script src="/js/draggable copy 2.js"></script>
 
 
     <!-- Favivon -->
@@ -58,7 +61,7 @@
 <body onload="loadAllTask()">
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
-    <dir w3-include-html="assed/template/draggablecards.html"></dir>
+    <div w3-include-html="assed/template/draggablecards.html"></div>
 
 
     <div></div>
