--- a/addContact.html
+++ b/addContact.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Contact</title>
 
-    <link rel="stylesheet"  type="text/css" href="/css/addContact.css">
+    <link rel="stylesheet" type="text/css" href="/css/addContact.css">
 
     <!-- customize Font -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+
+
+    <!-- BOOTSTARP LINKS -->
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
+        integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous" />
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
+
+
+
+
 </head>
 
 
@@ -29,13 +50,13 @@
         <div class="cancel-create-contact">
             <button class="cancel-btn">
                 <div class="cancel-btn-txt">Cancel</div>
-                    <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
+                <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
             </button>
 
             <button class="create-contact-btn">
                 <div class="create-contact-txt">Create contact</div>
-                <div class="create-contact-bounding-box-img"> 
-                    <img src="assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img"> 
+                <div class="create-contact-bounding-box-img">
+                    <img src="assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img">
                 </div>
             </button>
 
@@ -60,6 +81,7 @@
 
 
 
-    
+
 </body>
+
 </html>
