--- a/board.html
+++ b/board.html
@@ -23,37 +23,36 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
 
 
-    <!-- BOOTSTARP LINKS -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
-        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    < <!-- BOOTSTARP LINKS -->
+        <!-- Latest compiled and minified CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
-        integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
+            integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ"
+            crossorigin="anonymous" />
 
-    <!-- Latest compiled and minified JavaScript -->
-    <!-- Include Bootstrap JS (optional) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <!-- Include Draggable Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.1/draggable.bundle.legacy.min.js"></script>
-
-
-    <!-- customize Scripts -->
-    <script src="script.js"></script>
-    <script src="js/add_task.js"></script>
-    <script src="js/storage.js"></script>
-    <!-- <script src="js/draggable.js"></script> -->
-    <!-- <script src="/js/draggable copy.js"></script> -->
-    <script src="/js/draggable copy 2.js"></script>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+        <!-- Include Draggable Library -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.1/draggable.bundle.legacy.min.js"></script>
 
 
-    <!-- Favivon -->
+        <!-- customize Scripts -->
+        <script src="script.js"></script>
+        <script src="js/add_task.js"></script>
+        <script src="js/storage.js"></script>
+        <!-- <script src="js/draggable.js"></script> -->
+        <!-- <script src="/js/draggable copy.js"></script> -->
+        <script src="/js/draggable copy 2.js"></script>
 
-    <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
+
+        <!-- Favivon -->
+
+        <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
 
 
 </head>
