--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
     <!-- BOOTSTARP LINKS -->
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
-        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
-        integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+        integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous" />
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
-        integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
     <!-- customize Scripts -->
@@ -55,7 +55,7 @@
     <div class="loginLogo">
         <div class="logoJoin" id="login-container-overlay">
             <div style="width: 274px; height: 334.07px; position: relative" id="loading-logo">
-                <img src="/assed/svg/join_logoBIG.svg" alt="">       
+                <img src="/assed/svg/join_logoBIG.svg" alt="">
             </div>
         </div>
         <div class="loginInput" id="login-container" style="display: none;">
@@ -70,7 +70,7 @@
                             <div class="frame-157">
                                 <input value="" type="email" class="form-control border-0" placeholder="Email"
                                     style="border: none; box-shadow: none;">
-                               <img src="/assed/svg/emailicon.svg" alt="" srcset="">
+                                <img src="/assed/svg/emailicon.svg" alt="" srcset="">
                             </div>
                         </div>
                         <div class="frame-14">
@@ -92,7 +92,8 @@
                 </div>
                 <div class="frame-176">
                     <button class="button-wo-icon text-sm-btn" type="button">Log in</button>
-                    <button class="button-secondary-wo-icon text-sm-btn" onclick="window.location.href='Summary.html'" type="button">Gust Log in</button>
+                    <button class="button-secondary-wo-icon text-sm-btn" onclick="window.location.href='Summary.html'"
+                        type="button">Gust Log in</button>
                 </div>
             </div>
         </div>
