--- a/addContact.html
+++ b/addContact.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Contact</title>
 
-    <link rel="stylesheet"  type="text/css" href="/css/addContact.css">
+    <link rel="stylesheet" type="text/css" href="/css/addContact.css">
 
     <!-- customize Font -->
 
@@ -29,17 +30,27 @@
         <div class="cancel-create-contact">
             <button class="cancel-btn">
                 <div class="cancel-btn-txt">Cancel</div>
-                    <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
+                <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
             </button>
 
             <button class="create-contact-btn">
                 <div class="create-contact-txt">Create contact</div>
-                <div class="create-contact-bounding-box-img"> 
-                    <img src="assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img"> 
+                <div class="create-contact-bounding-box-img">
+                    <img src="assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img">
                 </div>
             </button>
-
         </div>
+
+        <form class="add-contact-textfileds">
+            <div class="inputfield-1-around">
+                <input type="text" class="inputfield-1" placeholder="Name">
+
+
+                <div class="inputfield-img-div">
+                    <img src="assed/svg/contact-imgs/person(1).svg" alt="" class="inputfield-img">
+                </div>
+            </div>
+        </form>
 
     </div>
 
@@ -60,6 +71,7 @@
 
 
 
-    
+
 </body>
+
 </html>
