add contact overlay almost ready

--- a/addContact.html
+++ b/addContact.html
@@ -61,6 +61,8 @@
             </button>
         </div>
 
+
+        <!--Input-Section-->
         <form class="add-contact-textfileds">
             <div class="inputfield-1-around">
                 <input type="text" class="inputfield-1" placeholder="Name">
@@ -70,7 +72,38 @@
                     <img src="assed/svg/contact-imgs/person(1).svg" alt="" class="inputfield-img">
                 </div>
             </div>
+
+            <div class="inputfield-1-around">
+                <input required type="text" class="inputfield-1" placeholder="Email">
+
+
+                <div class="inputfield-img-div">
+                    <img src="assed/svg/contact-imgs/mail.svg" alt="" class="inputfield-mail-img">
+                </div>
+            </div>
+
+            <div class="inputfield-1-around">
+                <input type="text" class="inputfield-1" placeholder="Phone">
+
+
+                <div class="inputfield-img-div">
+                    <img src="assed/svg/contact-imgs/call.svg" alt="" class="inputfield-phone-img">
+                </div>
+            </div>
         </form>
+
+
+        <!--Add-Contact-Sidebar-->
+        <div class="contact-sidebar">
+            <div class="contact-sidebar-txt-div">
+                <div class="contact-sidebar-txt-1">Add Contact</div>
+                <div class="contact-sidebar-txt-2">Tasks are better whith a team</div>
+                <div class="contact-sidebar-graphic">
+                    <img src="assed/svg/contact-imgs/Vector 5(1).svg" alt="">
+                </div>
+            </div>
+        </div>
+        
 
     </div>
 
