--- a/addContact.html
+++ b/addContact.html
@@ -99,8 +99,12 @@
                 <div class="contact-sidebar-txt-1">Add Contact</div>
                 <div class="contact-sidebar-txt-2">Tasks are better whith a team</div>
                 <div class="contact-sidebar-graphic">
-                    <img src="assed/svg/contact-imgs/Vector 5(1).svg" alt="">
+                    <img src="assed/svg/contact-imgs/Vector 5(1).svg" alt="" class="contact-sidebar-graphic-img">
                 </div>
+            </div>
+
+            <div class="contact-sidebar-logo-div">
+                
             </div>
         </div>
         
