--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
     <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
+    <link rel="stylesheet" type="text/css" href="/css/addContact.css">
 
     <!-- customize Font -->
 
@@ -37,6 +38,8 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
+    <script src="/js/addContact.js"></script>
+    <script src="js/storage.js"></script>
     <!-- Favivon -->
 
     <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
@@ -47,11 +50,12 @@
 
 </head>
 
-<body>
+<body onload="initContact()">
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
-    <div w3-include-html="assed/template/contact_site.html"></div>
-
+    <div id="allContact" w3-include-html="assed/template/contact_site.html"></div>
+    <div w3-include-html="assed/template/add_new_contact.html"></div>
+    
 
     
 
