--- a/addtask.html
+++ b/addtask.html
@@ -38,6 +38,8 @@
   <script src="script.js"></script>
   <script src="js/add_task.js"></script>
   <script src="js/storage.js"></script>
+  <script src="js/addContact.js"></script>
+
 
   <!-- Favivon -->
 
@@ -46,7 +48,7 @@
 
 </head>
 
-<body>
+<body onload="initnewTask();">
   <div w3-include-html="assed/template/header.html"></div>
   <div w3-include-html="assed/template/sidebar.html"></div>
   <!-- Input Task Fields -->
