--- a/addContact.html
+++ b/addContact.html
@@ -43,7 +43,7 @@
 
 <body>
 
-    <div class="overlay-add-contact">
+    <div id="overlay-add-contact" class="overlay-add-contact d-none">
         <div class="close-div">
             <img src="assed/svg/contact-imgs/close.svg" alt="" class="close-img">
         </div>
@@ -79,7 +79,7 @@
             </div>
 
             <div class="inputfield-1-around">
-                <input id="mailInputField" required type="text" class="inputfield-1" placeholder="Email">
+                <input id="mailInputField" required type="emai" class="inputfield-1" placeholder="Email">
 
 
                 <div class="inputfield-img-div">
@@ -88,7 +88,7 @@
             </div>
 
             <div class="inputfield-1-around">
-                <input id="phoneInputField" type="text" class="inputfield-1" placeholder="Phone">
+                <input id="phoneInputField" required type="tel" class="inputfield-1" placeholder="Phone">
 
 
                 <div class="inputfield-img-div">
