--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,8 @@
     <div w3-include-html="assed/template/sidebar.html"></div>
     <div id="allContact" w3-include-html="assed/template/contact_site.html"></div>
     <div w3-include-html="assed/template/add_new_contact.html"></div>
+    <div w3-include-html="addContact.html"></div>
+
     
 
     
