--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
+    <script src="/js/addContact.js"></script>
     <!-- Favivon -->
 
     <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
@@ -50,16 +51,11 @@
 <body>
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
-<<<<<<< HEAD
-    <div id="allContact" w3-include-html="assed/template/contact_site.html"></div>
+    <div w3-include-html="assed/template/contact_site.html"></div>
+    <!-- <div id="allContact" w3-include-html="assed/template/contact_site.html"></div> -->
     <div w3-include-html="assed/template/add_new_contact.html"></div>
     <div w3-include-html="addContact.html"></div>
 
-    
-=======
-    <div w3-include-html="assed/template/contact_site.html"></div>
-
->>>>>>> b0a1d1a5e1dfa4999c6a9590a54e0132debdeb5d
 
     
 
