--- a/addContact.html
+++ b/addContact.html
@@ -29,6 +29,11 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
+    
+    <!-- JS-functions -->
+    <script src="js/addContact.js"></script>
+    <script src="js/storage.js"></script>
+
 
 
 
@@ -38,7 +43,7 @@
 
 <body>
 
-    <div id="overlay-add-contact" class="overlay-add-contact d-none">
+    <div id="overlay-add-contact" class="overlay-add-contact">
         <div class="close-div">
             <img src="assed/svg/contact-imgs/close.svg" alt="" class="close-img">
         </div>
@@ -53,7 +58,7 @@
                 <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
             </button>
 
-            <button class="create-contact-btn">
+            <button onclick="addContact()" class="create-contact-btn">
                 <div class="create-contact-txt">Create contact</div>
                 <div class="create-contact-bounding-box-img">
                     <img src="assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img">
@@ -61,9 +66,11 @@
             </button>
         </div>
 
+
+        <!--Input-Section-->
         <form class="add-contact-textfileds">
             <div class="inputfield-1-around">
-                <input type="text" class="inputfield-1" placeholder="Name">
+                <input id="nameInputField" type="text" class="inputfield-1" placeholder="Name">
 
 
                 <div class="inputfield-img-div">
@@ -72,7 +79,7 @@
             </div>
 
             <div class="inputfield-1-around">
-                <input id="mailInputField" required type="text" class="inputfield-1" placeholder="Email">
+                <input id="mailInputField" required type="emai" class="inputfield-1" placeholder="Email">
 
 
                 <div class="inputfield-img-div">
@@ -81,7 +88,7 @@
             </div>
 
             <div class="inputfield-1-around">
-                <input id="phoneInputField" type="text" class="inputfield-1" placeholder="Phone">
+                <input id="phoneInputField" required type="tel" class="inputfield-1" placeholder="Phone">
 
 
                 <div class="inputfield-img-div">
@@ -89,6 +96,23 @@
                 </div>
             </div>
         </form>
+
+
+        <!--Add-Contact-Sidebar-->
+        <div class="contact-sidebar">
+            <div class="contact-sidebar-txt-div">
+                <div class="contact-sidebar-txt-1">Add Contact</div>
+                <div class="contact-sidebar-txt-2">Tasks are better whith a team</div>
+                <div class="contact-sidebar-graphic">
+                    <img src="assed/svg/contact-imgs/Vector 5(1).svg" alt="" class="contact-sidebar-graphic-img">
+                </div>
+            </div>
+
+            <div class="contact-sidebar-logo-div">
+
+            </div>
+        </div>
+        
 
     </div>
 
